# learning_opencv

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cmake/: Helper.cmake
